rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x518_2005_HierarchicalOperationalBindings.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x518_2005_HierarchicalOperationalBindings.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 93, column 2]
     │
     │ 
 092 │  -- operational binding information objects
 093 │  hierarchicalOperationalBinding OPERATIONAL-BINDING ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 094 │    AGREEMENT             HierarchicalAgreement
 095 │    APPLICATION CONTEXTS  {{directorySystemAC}}
 096 │    ASYMMETRIC ROLE-A
 097 │      { -- superior DSAESTABLISHMENT-INITIATOR  TRUE
 098 │                       ESTABLISHMENT-PARAMETER  SuperiorToSubordinate
 099 │                       MODIFICATION-INITIATOR   TRUE
 100 │                       MODIFICATION-PARAMETER   SuperiorToSubordinateModification
 101 │                       TERMINATION-INITIATOR    TRUE}
 102 │    ROLE-B
 103 │      { -- subordinate DSAESTABLISHMENT-INITIATOR  TRUE
 104 │                          ESTABLISHMENT-PARAMETER  SubordinateToSuperior
 105 │                          MODIFICATION-INITIATOR   TRUE
 106 │                          MODIFICATION-PARAMETER   SubordinateToSuperior
 107 │                          TERMINATION-INITIATOR    TRUE}
 108 │    ID                    id-op-binding-hierarchical
 109 │  }
     │
─────╯
