rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x518_2008_DistributedOperations.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x518_2008_DistributedOperations.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 52, column 2]
    │
    │ 
 51 │  -- parameterized type for deriving chained operations
 52 │  chained{OPERATION:operation} OPERATION ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 53 │    ARGUMENT OPTIONALLY-PROTECTED
 54 │      {SET {chainedArgument  ChainingArguments,
 55 │            argument         [0]  operation.&ArgumentType}}
 56 │    RESULT OPTIONALLY-PROTECTED
 57 │      {SET {chainedResult  ChainingResults,
 58 │            result         [0]  operation.&ResultType}}
 59 │    ERRORS
 60 │      {operation.&Errors EXCEPT referral | dsaReferral}
 61 │    CODE                           operation.&operationCode
 62 │  }
 64 │  --  bind unbind operation
    │
────╯
