rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x518_2008_HierarchicalOperationalBindings.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x518_2008_HierarchicalOperationalBindings.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 101, column 2]
     │
     │ 
 100 │  -- operational binding information objects
 101 │  hierarchicalOperationalBinding OPERATIONAL-BINDING ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 102 │    AGREEMENT             HierarchicalAgreement
 103 │    APPLICATION CONTEXTS  {{directorySystemAC}}
 104 │    ASYMMETRIC ROLE-A
 105 │      { -- superior DSAESTABLISHMENT-INITIATOR  TRUE
 106 │                       ESTABLISHMENT-PARAMETER  SuperiorToSubordinate
 107 │                       MODIFICATION-INITIATOR   TRUE
 108 │                       MODIFICATION-PARAMETER   SuperiorToSubordinateModification
 109 │                       TERMINATION-INITIATOR    TRUE}
 110 │    ROLE-B
 111 │      { -- subordinate DSAESTABLISHMENT-INITIATOR  TRUE
 112 │                          ESTABLISHMENT-PARAMETER  SubordinateToSuperior
 113 │                          MODIFICATION-INITIATOR   TRUE
 114 │                          MODIFICATION-PARAMETER   SubordinateToSuperior
 115 │                          TERMINATION-INITIATOR    TRUE}
 116 │    ID                    id-op-binding-hierarchical
 117 │  }
     │
─────╯
