rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x518_2012_DistributedOperations.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x518_2012_DistributedOperations.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 58, column 2]
    │
    │ 
 58 │  DsaReferralData ::= SET { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 59 │    reference      [0]  ContinuationReference,
 60 │    contextPrefix  [1]  DistinguishedName OPTIONAL,
 61 │    ...,
 62 │    ...,
 63 │    COMPONENTS OF CommonResults
 64 │  }
 66 │  --  common arguments and results
    │
────╯
