rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x518_2012_HierarchicalOperationalBindings.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x518_2012_HierarchicalOperationalBindings.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 109, column 2]
     │
     │ 
 108 │  -- operational binding information objects
 109 │  hierarchicalOperationalBinding OPERATIONAL-BINDING ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 110 │    AGREEMENT             HierarchicalAgreement
 111 │    APPLICATION CONTEXTS  {{directorySystemAC}}
 112 │    ASYMMETRIC ROLE-A
 113 │      { -- superior DSAESTABLISHMENT-INITIATOR  TRUE
 114 │                       ESTABLISHMENT-PARAMETER  SuperiorToSubordinate
 115 │                       MODIFICATION-INITIATOR   TRUE
 116 │                       MODIFICATION-PARAMETER   SuperiorToSubordinateModification
 117 │                       TERMINATION-INITIATOR    TRUE}
 118 │    ROLE-B
 119 │      { -- subordinate DSAESTABLISHMENT-INITIATOR  TRUE
 120 │                          ESTABLISHMENT-PARAMETER  SubordinateToSuperior
 121 │                          MODIFICATION-INITIATOR   TRUE
 122 │                          MODIFICATION-PARAMETER   SubordinateToSuperior
 123 │                          TERMINATION-INITIATOR    TRUE}
 124 │    ID                    id-op-binding-hierarchical
 125 │  }
     │
─────╯
