rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x518_2016_DistributedOperations.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x518_2016_DistributedOperations.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 57, column 2]
    │
    │ 
 57 │  DsaReferralData ::= SET { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 58 │    reference      [0]  ContinuationReference,
 59 │    contextPrefix  [1]  DistinguishedName OPTIONAL,
 60 │    ...,
 61 │    ...,
 62 │    COMPONENTS OF       CommonResults }
 64 │  --  common arguments and results
    │
────╯
