rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x518_2019_DistributedOperations.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x518_2019_DistributedOperations.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 61, column 2]
    │
    │ 
 61 │  DsaReferralData ::= SET { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 62 │    reference      [0]  ContinuationReference,
 63 │    contextPrefix  [1]  DistinguishedName OPTIONAL,
 64 │    ...,
 65 │    ...,
 66 │    COMPONENTS OF       CommonResults }
 68 │  --  common arguments and results
    │
────╯
